update boss key ui

--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKey.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKey.xaml
@@ -15,6 +15,8 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <Grid Grid.Row="0">
@@ -22,37 +24,30 @@
         </Grid>
 
         <Grid Grid.Row="1">
-            <CheckBox Content="启用老板键" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}"/>
+            <CheckBox Content="启用老板键" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}" Name="cbx_EnableBossKey"/>
         </Grid>
 
-        <Grid Grid.Row="2" Margin="0,0,20,10">
+        <Grid Grid.Row="2" Margin="0,0,20,10" IsEnabled="{Binding ElementName=cbx_EnableBossKey,Path=IsChecked}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-
             <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
-
-            <CheckBox Content="切换到任务" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}" Name="cbx_Running" Checked="cbx_Running_Checked"/>
-
+            <RadioButton Content="切换到任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Running" Checked="cbx_Running_Checked"/>
             <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}" BorderThickness="0">
                 <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksRunning">
-                    
+
                 </ListBox>
             </GroupBox>
         </Grid>
-
-        <Grid Grid.Row="3" Margin="0,0,20,10">
+        <Grid Grid.Row="3" Margin="0,0,20,10" IsEnabled="{Binding ElementName=cbx_EnableBossKey,Path=IsChecked}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="30"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-
             <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
-
-            <CheckBox Content="结束任务" HorizontalAlignment="Left" VerticalAlignment="Center" Style="{StaticResource CheckBoxStyle}" Name="cbx_Kill" Checked="cbx_Kill_Checked"/>
-
-            <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}" BorderThickness="0">
+            <RadioButton Content="结束任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Kill" Checked="cbx_Kill_Checked"/>
+            <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Kill,Path=IsChecked}" BorderThickness="0">
                 <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksKill">
                     <ListBox.ItemTemplate>
                         <DataTemplate>
@@ -64,6 +59,27 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </GroupBox>
+        </Grid>
+        <Grid Grid.Row="4" Margin="0,0,20,10" IsEnabled="{Binding ElementName=cbx_EnableBossKey,Path=IsChecked}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
+            <RadioButton Content="打开指定的程序、文件、或网址" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Execute" Checked="cbx_Execute_Checked"/>
+            <GroupBox Header="指定程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Execute,Path=IsChecked}" BorderThickness="0">
+                <Grid>
+                    <TextBox  Margin="10,5,90,5" Height="28" VerticalContentAlignment="Center" Text="https://www.baidu.com"/>
+                    <Button Content="浏览" HorizontalAlignment="Right" Width="68" Height="22" Margin="0,0,10,0" Style="{StaticResource ButtonStyle}"/>
+                </Grid>
+            </GroupBox>
+        </Grid>
+        <Grid Grid.Row="5" Margin="0,0,20,10" IsEnabled="{Binding ElementName=cbx_EnableBossKey,Path=IsChecked}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="30"/>
+            </Grid.RowDefinitions>
+            <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
+            <RadioButton Content="切换到桌面" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" IsChecked="True" Name="cbx_SwitchToDesktop" Checked="cbx_SwitchToDesktop_Checked"/>
         </Grid>
     </Grid>
 </Page>
