update boss key

--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKeySetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Pages/BossKeySetting.xaml
@@ -34,10 +34,16 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
-                <RadioButton Content="切换到任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Running" Checked="cbx_Running_Checked" Style="{StaticResource RadioButtonStyle}" />
+                <RadioButton Content="切换到任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Running" Checked="cbx_Running_Checked" Unchecked="cbx_Running_Unchecked" Style="{StaticResource RadioButtonStyle}" />
                 <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Running,Path=IsChecked}" BorderThickness="0">
-                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksRunning" SelectionChanged="list_TasksRunning_SelectionChanged">
-
+                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksRunning" SelectionChanged="list_TasksRunning_SelectionChanged" MaxHeight="210">
+                        <ListBox.ItemTemplate>
+                            <DataTemplate>
+                                <Grid>
+                                    <Label Content="{Binding MainWindowTitle}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </ListBox.ItemTemplate>
                     </ListBox>
                 </GroupBox>
             </Grid>
@@ -47,14 +53,14 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
                 <Border CornerRadius="5" Grid.RowSpan="2" BorderBrush="{DynamicResource BlackColor}" BorderThickness="1"></Border>
-                <RadioButton Content="结束任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Kill" Checked="cbx_Kill_Checked" Style="{StaticResource RadioButtonStyle}"/>
+                <RadioButton Content="结束任务" HorizontalAlignment="Left" VerticalAlignment="Center" GroupName="bosskey" Name="cbx_Kill" Checked="cbx_Kill_Checked" Unchecked="cbx_Kill_Unchecked" Style="{StaticResource RadioButtonStyle}"/>
                 <GroupBox Header="当前执行的程序" Grid.Row="1" Margin="0,5,0,10" IsEnabled="{Binding ElementName=cbx_Kill,Path=IsChecked}" BorderThickness="0">
-                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksKill" SelectionChanged="list_TasksKill_SelectionChanged">
+                    <ListBox BorderThickness="0" Style="{StaticResource ListBoxStyle}" Name="list_TasksKill" SelectionChanged="list_TasksKill_SelectionChanged" MaxHeight="210">
                         <ListBox.ItemTemplate>
                             <DataTemplate>
                                 <Grid>
                                     <!--<CheckBox Style="{StaticResource CheckBoxStyle}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="3" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"></CheckBox>-->
-                                    <Label HorizontalAlignment="Left" Margin="20,3,3,3" Content="{Binding}"/>
+                                    <Label HorizontalAlignment="Left" Margin="20,3,3,3" Content="{Binding MainWindowTitle}"/>
                                 </Grid>
                             </DataTemplate>
                         </ListBox.ItemTemplate>
