--- a/Master-Zhao/Master-Zhao.Shell/View/Beautify/Pages/StaticWallpaper.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Beautify/Pages/StaticWallpaper.xaml
@@ -28,10 +28,11 @@
             </Grid.RowDefinitions>
 
             <GroupBox Header="预览">
-                <Grid>
-                    <Image Source="../recycle.png" Width="30" Height="30" Panel.ZIndex="1" Margin="5" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+                <Grid Name="grid_Preview">
+                    <Image Source="../../../recycle.png" Width="30" Height="30" Panel.ZIndex="1" Margin="5" Stretch="Uniform" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                     <Label Content="回收站" Foreground="White" Panel.ZIndex="1" FontSize="10" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,30,0,0"/>
-                    <Image Source="../flower.jpg" Stretch="UniformToFill" Name="img_background"/>
+                    <Image Source="../../../flower.jpg" Stretch="UniformToFill" Name="img_background"/>
+                    <!--<controls:DrawingImageControl x:Name="img_background" Width="{Binding ElementName=grid_Preview,Path=ActualWidth}" Height="{Binding ElementName=grid_Preview,Path=ActualHeight}"/>-->
                 </Grid>
             </GroupBox>
 
