--- a/Master-Zhao/Master-Zhao.Shell/MainWindow.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/MainWindow.xaml
@@ -41,6 +41,7 @@
                 <controls:ImageButton Title="管理" Subtitle="开机启动项、后台服务、网络监控" ImagePath="Icon/system.png" Visibility="Collapsed"/>
                 <controls:ImageButton Title="工具" Subtitle="硬件信息、开机助手、快速启动" ImagePath="Icon/information.png" Click="btnTool_Click" Visibility="Visible"/>
                 <controls:ImageButton Title="划水" Subtitle="愉快的划水" ImagePath="Icon/huashui.jpg" Visibility="Collapsed"/>
+                <controls:ImageButton Title="设置" Subtitle="软件设置" ImagePath="Icon/setting.png" Click="btnSetting_Click"/>
                 <controls:ImageButton Title="关于" Subtitle="关于本软件" ImagePath="Icon/about.png" Click="btnAbout_Click"/>
             </WrapPanel>
         </Grid>
