--- a/Master-Zhao/Master-Zhao.Shell/View/Setting/Pages/BackgroundSetting.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Setting/Pages/BackgroundSetting.xaml
@@ -31,6 +31,7 @@
         <WrapPanel Grid.Row="1">
             <Rectangle Fill="Transparent" MouseDown="Setbackground_MouseDown"/>
             <Rectangle Fill="White" MouseDown="Setbackground_MouseDown"/>
+            <Rectangle Fill="LightSkyBlue" MouseDown="Setbackground_MouseDown"/>
             <Rectangle MouseDown="Setbackground_MouseDown">
                 <Rectangle.Fill>
                     <ImageBrush ImageSource="../../../Icon/about_back.jpeg" Stretch="UniformToFill"/>
