--- a/Master-Zhao/Master-Zhao.Shell/View/Utility/Windows/FastRun.xaml
+++ b/Master-Zhao/Master-Zhao.Shell/View/Utility/Windows/FastRun.xaml
@@ -7,21 +7,74 @@
         WindowStyle="None" AllowsTransparency="True"
         Background="Transparent"
         mc:Ignorable="d"
-        Title="FastRun" Height="300" Width="300" MouseDown="Window_MouseDown" Loaded="Window_Loaded">
-    <Grid>
-        <Canvas Name="canvas" Width="300" Height="300">
-            <!--<local:FastRunButton ContentRadiusX="48" ContentRadiusY="48" Center="50,50" VerticalContentAlignment="Bottom" Foreground="White" FontSize="20" Content="abc" Width="100" Height="100" ImagePath="../Icon/system.png" HostCanvas="{Binding ElementName=canvas}">
-            </local:FastRunButton>
-
-            <local:FastRunButton ContentRadiusX="48" ContentRadiusY="48" Center="50,50" VerticalContentAlignment="Bottom" Foreground="White" FontSize="20" Content="abc" Width="100" Height="100" ImagePath="../Icon/system.png" HostCanvas="{Binding ElementName=canvas}">
-            </local:FastRunButton>
-
-            <local:FastRunButton ContentRadiusX="48" ContentRadiusY="48" Center="50,50" VerticalContentAlignment="Bottom" Foreground="White" FontSize="20" Content="abc" Width="100" Height="100" ImagePath="../Icon/system.png" HostCanvas="{Binding ElementName=canvas}">
-            </local:FastRunButton>
-
-            <local:FastRunButton  ContentRadiusX="48" ContentRadiusY="48" Center="50,50" VerticalContentAlignment="Bottom" Foreground="White" FontSize="20" Content="abc" Width="100" Height="100" ImagePath="../Icon/system.png" HostCanvas="{Binding ElementName=canvas}" IsSelected="True">
-            </local:FastRunButton>-->
+        Title="FastRun" Height="400" Width="400" PreviewMouseRightButtonDown="Window_PreviewMouseRightButtonDown" PreviewMouseMove="Window_PreviewMouseMove" Loaded="Window_Loaded">
+    <Window.Resources>
+        <Canvas x:Key="left" Width="133.346" Height="264.333">
+            <Path Data="M24,38 C0.89547628,72.038407 15.010616,113.49673 29.5,128.5 L-46.503959,207.49979 C-46.685377,207.23774 -60.991527,193.762 -61.171775,193.5 -124.74465,101.44018 -113.82155,11.469536 -40.503647,-55.83367 z" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=Background,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Height="264.333" Stretch="Fill" Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=BorderBrush,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" Width="133.346" Margin="15.994,64.5,250.66,71.167"/>
         </Canvas>
-        <Image Name="img_DragArea" MouseDown="Window_MouseDown" Width="35"  Height="35" Source="../Icon/move.jpg"/>
+        <Canvas x:Key="top"  Width="133.346" Height="264.333">
+            <Path  Data="M32.176792,28.041916 C2.1128207,59.994353 16.855046,119.34987 40.233181,133.90566 40.233181,133.90566 -51.663851,199.9682 -51.844099,199.7062 -121.20812,113.94111 -114.23193,12.580008 -35.5345,-59.326397 z" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=Background,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="260.033" Margin="150.736,-38.005,0,0" Stretch="Fill" Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=BorderBrush,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="140.782" RenderTransformOrigin="0.5,0.5">
+                <Path.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="91.112"/>
+                        <TranslateTransform X="-12.67998211568198" Y="-3.5777541805738338"/>
+                    </TransformGroup>
+                </Path.RenderTransform>
+            </Path>
+        </Canvas>
+        <Canvas x:Key="right" Width="133.346" Height="264.333">
+            <Path  Data="M26.52714,38.955075 C3.4226164,72.993482 15.010616,113.49673 29.5,128.5 L-58.504946,191.5 C-58.686364,191.23795 -60.991527,193.762 -61.171775,193.5 -117.98751,110.91469 -114.47543,33.15009 -48.404503,-44.314435 z" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=Background,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="238.833" Margin="252.75,78.393,0,0" Stretch="Fill" Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=BorderBrush,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="131.566" RenderTransformOrigin="0.5,0.5">
+                <Path.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="178.361"/>
+                        <TranslateTransform X="0.11915589801833448" Y="5.1842956001542007"/>
+                    </TransformGroup>
+                </Path.RenderTransform>
+            </Path>
+        </Canvas>
+        <Canvas x:Key="bottom" Width="133.346" Height="264.333">
+            <Path Data="M30.408029,27.843472 C7.3035053,61.881879 24.762119,118.8827 39.251503,133.88597 L-42.865045,210.12047 C-43.046463,209.85842 -59.446134,193.14752 -59.626382,192.88552 -116.85354,113.89339 -114.90716,30.188753 -48.504385,-49.5 z" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=Background,UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Left" Height="260.62" Margin="128.716,193.847,0,-54.467" Stretch="Fill" Stroke="{Binding RelativeSource={RelativeSource AncestorType=Button},Path=BorderBrush,UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="140.802" RenderTransformOrigin="0.5,0.5">
+                <Path.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="-90.265"/>
+                        <TranslateTransform X="3.683656544262206" Y="-12.934341539759373"/>
+                    </TransformGroup>
+                </Path.RenderTransform>
+            </Path>
+        </Canvas>
+    </Window.Resources>
+    <Grid>
+        <Grid Height="400" Width="400" Background="Transparent">
+            <!--<Grid x:Name="gMenu">
+                <Border Grid.ColumnSpan="4" Grid.RowSpan="4">
+                    <Border.Background>
+                        <RadialGradientBrush>
+                            <GradientStop Color="White" Offset="0.9"/>
+                            <GradientStop Offset="1"/>
+                            <GradientStop x:Name="ColoCirkle" Color="Silver" Offset="0.91"/>
+                        </RadialGradientBrush>
+                    </Border.Background>
+                </Border>
+            </Grid>-->
+
+            <local:PathButton x:Name="btn_Left" Height="264" Width="133.346" Background="White" BorderBrush="Black" Content="{StaticResource left}" HorizontalAlignment="Left" VerticalAlignment="Top" >
+            </local:PathButton>
+
+            <local:PathButton x:Name="btn_Top" Height="264" Width="133.346" Background="White" BorderBrush="Black" Content="{StaticResource top}" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            </local:PathButton>
+
+            <local:PathButton x:Name="btn_Right" Height="264" Width="133.346" Background="White" BorderBrush="Black" Content="{StaticResource right}" HorizontalAlignment="Right" VerticalAlignment="Center" >
+            </local:PathButton>
+
+            <local:PathButton x:Name="btn_Bottom" Height="264" Width="133.346" Background="White" BorderBrush="Black" Content="{StaticResource bottom}" HorizontalAlignment="Center" VerticalAlignment="Top" >
+            </local:PathButton>
+
+        </Grid>
     </Grid>
 </Window>
